Fix: `ActionsPageSystemInfo` permission label alignments

--- a/src/modules/dashboard/components/ActionsPageFeed/ActionsPageSystemInfo/ActionsPageSystemInfo.css
+++ b/src/modules/dashboard/components/ActionsPageFeed/ActionsPageSystemInfo/ActionsPageSystemInfo.css
@@ -9,6 +9,10 @@
   letter-spacing: var(--spacing-medium);
 }
 
+.main > div {
+  vertical-align: sub;
+}
+
 .themeDefault {
   composes: main;
   background-color: color-mod(var(--primary) alpha(6%));
